examples/gateway-api/gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  namespace: kong-gatewayapi
---
apiVersion: networking.x-k8s.io/v1alpha1
kind: GatewayClass
metadata:
  name: sample-gatewayclass
spec:
  controller: kong/kong-controller
---
apiVersion: networking.x-k8s.io/v1alpha1
kind: Gateway
metadata:
  name: kong
  namespace: kong-gatewayapi
spec:
  gatewayClassName: sample-gatewayclass
  listeners:
    - protocol: HTTP
      port: 80
      routes:
        kind: HTTPRoute
        selector:
          matchLabels:
            app: kuard
